--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/normalize.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <script src="https://kit.fontawesome.com/088c2fe72e.js" crossorigin="anonymous"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -200,7 +201,7 @@
         </div>
   
         <small class="text-muted">
-          c 2022 Sofía Geisel. Todos los derechos reservados.
+          <i class="fa-regular fa-copyright"></i> 2022 Sofía Geisel. Todos los derechos reservados.
         </small>
       </footer>
     </body>
